deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellopython
  labels:
    app: hellopython
  namespace: ns-jenkins
spec:
  selector:
    matchLabels:
      app: hellopython
  replicas: 2
  template:
    metadata:
      name: hellopython
      labels:
        app: hellopython
    spec:
      containers:
        - name: hellopython
          image: armyost/hellopython
          imagePullPolicy: Always
          ports:
            - name: port1
              containerPort: 80
          resources:
            requests:
              cpu: 500m
              memory: 1024Mi
            limits:
              cpu: 1000m
              memory: 2048Mi
