deployment/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellopython
spec:
  type: NodePort
  selector:
    app: hellopython
  ports:
    - name: hellopython
      port: 8090
      targetPort: 80
